syntax = "proto3";

package RF.myBufTest.schema;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message CloudEventEnevlop
{
    string type = 1;
    string specversion = 2;
    string source = 3;
    string subject = 4;
    bytes id = 5;
    google.protobuf.Timestamp time = 6;
    string datacontenttype = 7;

    // Allow use of any custom schema
    google.protobuf.Any data = 8;
}