syntax = "proto3";

package RF.myBufTest.schema.data;

import "google/protobuf/timestamp.proto";

message User
{
    string userID = 10000;
    string firstname = 10001;
    string lastname = 10002;
}